css/earsketch/styles.less
@import "variables.less";

html, body {
  height: 100vh;
  padding: 0;
  margin: 0;
  font-family: @font;
}

/* Prevent Headless UI from adding padding-right to html when page has no scrollbar */
html {
  padding-right: 0 !important;
}

.gutter {
  background-color: black;
  background-repeat: no-repeat;
  background-position: 50%;
}

.gutter.gutter-vertical {
  height: 6px;
  cursor: ns-resize;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
}

.gutter.gutter-horizontal {
  width: 6px;
  cursor: ew-resize;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
}

.modal-dialog {
  width: 700px;
}

.panel-label {
  height: @panel-label-height;
  display: flex;
  align-items: center;
  margin-left: 10px; // hmmmm

  i {
    font-size: 17px;
    margin-left: 5px;
    margin-right: 7px;
  }
}

.prevent-selection {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -o-user-select: none;
}

/* Button Styles */
// remove the default blue highlight
button:focus {
  outline: none !important;
}

.btn {
  border: 0;
  border-radius: 0;
}

.btn-white {
  background-color: @white-bg;
  color: @dark-bg;
  border: 0;
  border-radius: 0;
}

.btn-action {
  background: transparent;
  color: @gen-action;

  &:hover,
  &:active,
  &:focus {
    background: transparent;
    color: @gen-action;
    opacity: 0.7;
  }
}

.btn-white:hover {
  background-color: @light-bg;
}

.btn-clear-warning {
  color: orange !important;
}

.btn-clear {
  background-color: transparent;
  border: 0;
  border-radius: 0;

  &:hover, &:active, &:focus {
    color: @light-font;
    opacity: 0.7;
  }
}

.btn-run {
  color: @gen-play !important;

  &:hover, &:active, &:focus {
    opacity: 0.7;
  }
}

.btn-highlight {
  background-color:@highlight-bg;
  color:@dark-bg;
  border: 0;
  border-radius: 0;

  &:hover {
    background-color:@light-bg;
  }
}


.btn-cai {
  background-color: #d3d25a !important;
  color: black;
  border-radius: 8px;
  padding: 1px 5px;
  margin: 10px;
  max-width: 90%;
  white-space: initial;
  text-align: left;

  &:hover {
    background-color: #9b9a46;
  }
}

.list-cai-content {
  background-color: #d3d25a;
  z-index: 1;
  margin-left: 5%;
  margin-right: 5%;
  height: 33vh;
  overflow-y: scroll;
}

.list-cai-content option {
  color: black;
  padding: 12px 16px;
  display: block;
  border-bottom: 1px solid black;
  white-space: pre-wrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.list-cai-content li{
  background-color: #d3d25a;
}

.list-cai-content li:nth-child(odd){
  background-color: #9b9a46;
}

.list-cai-content li:nth-child(even){
  background-color: #d3d25a;
}


.list-cai-content .btn{
  color: black;
  border-bottom: 1px solid black;
  width: 100%;
  padding: 10px;
}

.list-cai-content .btn:hover{
  background-color: #cecd8b;
}

.list-cai-content option:hover {
  background-color: #9b9a46
}

.btn-xs {
  padding: 2px 5px;
}

.btn-floating {
  z-index: 40;
  border-color: @gen-action;
  border-style: solid;
  border-width: 1px;
  padding: 7px;
  position: relative;
  right: 20px;
  font-size: 11px;
  float: right;
  display: table-cell;
  min-width: 125px;
  -moz-transition: all .2s ease-in-out;
  -ms-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;

  &:hover {
    opacity: 1 !important;
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -o-transform: scale(1.1);
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }

  i {
    font-size: 16px;
  }

  span {
    position: relative;
    left: 4px;
    bottom: 2px;
    padding: 2px;
  }
}

.btn-floating, .btn-floating:hover {
  cursor: pointer;
}

#main-container {
  top: @header-height;
  width: 100%;
  overflow-y: hidden;
}

#logged-in {
  background-color: #939393;
  border-radius: 6px;
  padding: 2px 8px;
  font-size: 16px;
}

/* NAVIGATION BAR */
#top-header-nav {
  top: 0;
  right: 0;
  left: 0;
  max-height: @header-height;
  height: @header-height;
  background-color: @bg;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* status messages */
.notificationBar {
  margin: auto;
  z-index: 999;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 0;
  //background-color: #dff0d8;
  -webkit-transition: all linear 0.3s;
  transition: all linear 0.3s;

  &.ng-hide {
    opacity: 0;
  }
}

.notificationBar.normal {
  color: #dff0d8;
}

.notificationBar.success {
  color: #9ffa00;
}

.notificationBar.failure1 {
  color: #f2dede;
}

.notificationBar.failure2 {
  color: #ff8080;
}

.notificationPopup {
  color: white;
  margin: auto;
  position: relative;
  float: right;
  width: 250px;
  text-align: center;
  z-index: 100;
  top: 15px;
  right: -16px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 0;
  padding: 8px 10px;
  background-color: @medlight-bg;
  -webkit-transition: all linear 0.3s;
  transition: all linear 0.3s;

  &.ng-hide {
    opacity: 0;
  }
}

#top-header-nav-links .announcement-banner, #top-header-nav-links .announcement-banner:focus {
  padding: 4px;
  margin-left: 20px;
  border-radius: 5px;
  text-transform: none;
  text-decoration: none;
  font-weight: 100;
}


#top-header-nav a.brand img {
  height: 22px;
  margin-top: 10px;
  margin-left: 6px;
}
/* ... */

